gccida/c0/scan_loop
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1119:4: error: expected ';' after expression
rtx v46; // [rsp+98h] [rbp-F8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1119:5: error: use of undeclared identifier 'v46'
rtx v46; // [rsp+98h] [rbp-F8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1120:4: error: expected ';' after expression
rtx v47; // [rsp+A0h] [rbp-F0h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1120:5: error: use of undeclared identifier 'v47'
rtx v47; // [rsp+A0h] [rbp-F0h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1128:4: error: expected ';' after expression
rtx x; // [rsp+D8h] [rbp-B8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1128:5: error: use of undeclared identifier 'x'
rtx x; // [rsp+D8h] [rbp-B8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1137:4: error: expected ';' after expression
rtx update_end; // [rsp+120h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1137:5: error: use of undeclared identifier 'update_end'
rtx update_end; // [rsp+120h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1138:4: error: expected ';' after expression
rtx update_start; // [rsp+128h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1138:5: error: use of undeclared identifier 'update_start'
rtx update_start; // [rsp+128h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1139:4: error: expected ';' after expression
rtx update_starta; // [rsp+128h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1139:5: error: use of undeclared identifier 'update_starta'
rtx update_starta; // [rsp+128h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1140:4: error: expected ';' after expression
rtx temp; // [rsp+130h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1140:5: error: use of undeclared identifier 'temp'
rtx temp; // [rsp+130h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1141:4: error: expected ';' after expression
rtx tempa; // [rsp+130h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1141:5: error: use of undeclared identifier 'tempa'
rtx tempa; // [rsp+130h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1142:4: error: expected ';' after expression
rtx tempb; // [rsp+130h] [rbp-60h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1142:5: error: use of undeclared identifier 'tempb'
rtx tempb; // [rsp+130h] [rbp-60h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/loop.c:1143:4: error: expected ';' after expression
rtx tempc; // [rsp+130h] [rbp-60h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scan_loop/src/obj/loop.o] Error 1
